// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CNavTitle customize 1`] = `
<div>
  <li
    class="nav-title bazinga"
  >
    Test
  </li>
</div>
`;

exports[`loads and displays CNavTitle component 1`] = `
<div>
  <li
    class="nav-title"
  >
    Test
  </li>
</div>
`;
